# NYC_TAXI_2025

./: .env.example  .gitignore  .releaserc.json  CHANGELOG.md  Dockerfile  README.md  docker-compose.yml  dockerfile  load.py  main.py  package-lock.json  package.json  pyproject.toml  requirements.txt
.github/workflows/: docker-build.yml  release.yml
src/: check_parquet.py  data_cleaner.py  database.py  download_data.py  import_to_duckdb.py  import_to_postgres.py  load_raw_data.py  migrate_to_postgres.py
src/api/: database.py  main.py  models.py  routes.py  schemas.py  services.py
